--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="menu-item">
                 <div class="heading">
                   <h4>Company</h4>
-                  <img src="\images\icon-arrow-dark.svg" alt="item-close" />
+                  <img src="/images/icon-arrow-dark.svg" alt="item-close" />
                 </div>
                 <div class="items">
                   <a href="#">About</a>
@@ -70,7 +70,7 @@
               <div class="menu-item">
                 <div class="heading">
                   <h4>Connect</h4>
-                  <img src="\images\icon-arrow-dark.svg" alt="item-close" />
+                  <img src="/images/icon-arrow-dark.svg" alt="item-close" />
                 </div>
                 <div class="items">
                   <a href="#">Contact</a>
@@ -132,7 +132,7 @@
       <div class="image-circle"></div>
       <div class="editor-content">
         <div class="whitespace">
-          <img src="\images\illustration-phones.svg" alt="" />
+          <img src="/images/illustration-phones.svg" alt="" />
         </div>
 
         <div class="text-content">
@@ -176,7 +176,7 @@
     </section>
 
     <section class="blogr">
-      <img src="\images\logo.svg" alt="" />
+      <img src="/images/logo.svg" alt="" />
       <div class="content">
         <div class="footer-blogr1">
           <h2>Product</h2>
